--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,3 +8,4 @@ services:
         volumes:
             - /opt/docker/shiruvaaa:/usr/share/nginx/html
             - /opt/docker/shiruvaaa/default.conf:/etc/nginx/conf.d/default.conf
+            - /mnt/sdb/memes:/usr/share/nginx/html/videos
